# otctl

./: .gitignore  CMakeLists.txt
cmake/: FindJsoncpp.cmake
src/: CLI.cpp  CLI.hpp  CMakeLists.txt  main.cpp  util.h
